# mcode_translator

./: .coverage 2  .env  .env.example  .gitignore  CACHE_DEBUGGING.md  CHANGELOG.md  CONTRIBUTING.md  FETCHER_IMPLEMENTATION_SUMMARY.md  LICENSE  NOTICE  OPTIMIZATION_RESULTS.md  PROCESSING_METHODS_README.md  QUICKSTART.md  README.md  README_UNIFIED_PROCESSOR.md  TESTING.md  all_mcode_elements.json  analysis_report.html  analyze_nct03879174.py  analyze_optimization_results.py  breast_cancer_trials_demo.json  cache_debug.py  clean_patient.ndjson  clinicaltrials_api_research.md  config.json  coverage.xml  coverage_all.xml  coverage_unit.xml  cross_validation_config.json  curated_matches.ndjson  data_curation_script.py  data_extraction_parsing_plan.md  debug_llm.py  debug_pipeline.py  debug_trial_types.py  demo_cache_functionality.py  demo_fetcher_functionality.py  demo_llm_caching.py  direct_pipeline_comparison_report.md  direct_pipeline_output_breast_cancer_her2_positive.json  (+144 more)
.kilocode/: mcp.json
archive/: advanced_task_tracker.py  benchmark_task.py  mcode-cli.py
cache/: full_study:NCT03727126.json  full_study:NCT05437757.json
comparison_results/: mcode_comparison_report_20250909_181750.md  mcode_comparison_results_20250909_181749.json  mcode_comparison_summary_20250909_181749.json
data/: NCT00109785.copilot.GPT4-1.gold.json  NCT00616135.copilot.GPT4-1.gold.json  NCT01026116.copilot.GPT4-1.gold.json  NCT01922921.copilot.GPT4-1.gold.json  NCT06650748.copilot.GPT4-1.gold.json  fetched_breast_cancer_trial.ndjson  processed_breast_cancer_patient.ndjson  processed_breast_cancer_trial.ndjson  select_breast_cancer_trials.ndjson  summarized_breast_cancer_patient.ndjson  summarized_breast_cancer_trial.ndjson
design/: default_prompt_functionality.md  implementation_plan_summary.md  new_optimization_ui_architecture.md  new_optimization_ui_deployment.md  new_optimization_ui_implementation.md  new_unified_cli_design.md  progress_summary.md  system_architecture.md
docs/: COMPREHENSIVE_DOCUMENTATION.md  COMPREHENSIVE_SYSTEM_IMPROVEMENTS.md  MODEL_CONFIGURATION_FIX_SUMMARY.md  MODEL_LIBRARY_GUIDE.md  NEW_CLI_DOCUMENTATION.md  NEW_OPTIMIZATION_UI_USER_GUIDE.md  PROMPT_LIBRARY_GUIDE.md  README.md  README_OPTIMIZATION.md  STRICT_FRAMEWORK_DOCUMENTATION.md  STRICT_FRAMEWORK_IMPLEMENTATION.md  TESTING_CLEANUP_PLAN.md  TESTING_REORGANIZATION_PLAN.md  TEST_RUNNER_GUIDE.md  TOKEN_TRACKING_SYSTEM.md  api-reference.md  architecture.md  benchmark_report.json  caching_system_refactor_summary.md  combined_benchmark_optimization.md  configuration.md  ensemble_trials_guide.md  fetcher_caching_update.md  mcode_ontology.md  mcode_validation.md  module-reference.md  pipeline_refactor.md  prompt_optimization_framework.md  task_queue_architecture.md  troubleshooting.md  unified_api_manager_design.md  usage-examples.md  validation_benchmarking_optimization.md  validation_logic_update_plan.md
examples/: CLI_demo.py  CLI_demo.sh  README.md  README_CLI.md  breast_cancer_core_memory_demo.ipynb  breast_cancer_demo_interactive.py  breast_cancer_end_to_end_demo.py  cli_basic_usage.py  cli_end_to_end_examples.py  clinical_trials_demo.ipynb  clinical_trials_demo.py  clinical_trials_ingestion.ipynb  clinical_trials_ingestion.py  comprehensive_demo.ipynb  comprehensive_demo.py  comprehensive_mcode_demo.ipynb  core_ingest_from_uploaded_files.ipynb  core_memory_integration_demo.ipynb  core_memory_integration_demo.py  demo_core_memory_client.ipynb  demo_patient_summary_with_codes.py  demo_summarizer_cli.py  demo_trial_summary_with_codes.py  demo_trials_raw.json  demo_trials_raw.ndjson  engine_demo.py  enhanced_mcode_demo.ipynb  ensemble_matching_demo.py  ensemble_trials_examples.py  executed_clinical_trials_demo.ipynb  executed_clinical_trials_ingestion.ipynb  executed_patients_demo.ipynb  matching_engine_demo.py  mcode_ontology_demo.py  mcode_pipeline_demo.ipynb  mcode_translator_complete_workflow.ipynb  mcode_workflow.py  patient_matching_demo.ipynb  patient_matching_demo.py  patients_demo.ipynb  (+12 more)
heysol_api_client/: API_DOCUMENTATION.md  CHANGELOG.md  README.md  TESTING_REPORT.md  __init__.py  api_base_url_investigation_results.json  cli.py  comprehensive_endpoint_test_results_20250921_180628.json  comprehensive_endpoint_test_results_20250921_181106.json  comprehensive_endpoint_test_results_20250921_181457.json  coverage.xml  debug_oauth2_config.py  heysol_config.example.json  heysol_log_demo_results.json  mcp_working_vs_not_results.json  oauth2_google_demo.py  oauth2_log_cli.py  oauth2_log_demo.py  oauth2_log_demo_results.json  oauth2_log_operations.ipynb  pyproject.toml  requirements.txt  setup.py  setup_test_environment.py  test_api_key_operations.py  test_oauth2_interactive.py  test_oauth2_non_interactive.py  test_oauth2_simple.py  test_simple_oauth2_flow.py
inter_rater_analysis_results/: inter_rater_analysis_20250920_002815.json  inter_rater_analysis_20250920_002841.json  inter_rater_rater_results_20250920_002815.json  inter_rater_rater_results_20250920_002841.json
models/: README.md  models_config.json
optimization_results/: benchmark_01dd5493-3a24-46b6-bf6c-7f3698ff5664.json  benchmark_0357a4db-a15d-4abb-a213-59ee35a27c69.json  benchmark_0443fd69-0b4b-43ad-96da-4cf99263042d.json  benchmark_04e3d827-9ffe-40ad-8576-c4743d9714ba.json  benchmark_06024866-8c88-4b02-8f2b-d6a11b6f3b85.json  benchmark_06cf82dd-f9e0-4528-b8c0-9fc028ef2ace.json  benchmark_06f4afcb-de5a-4d52-b2bf-863f04360fd8.json  (+381 more)
prompts/: README.md  (+3 more)
(+1107 files in other folders)
